--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "utube",
   "version": "1.0.0",
   "description": "",
+  "engines": {
+    "node": "12.16.1"
+  },
   "main": "index.js",
   "scripts": {
-    "start": "index.js"
+    "start": " index.js"
   },
   "keywords": [],
   "author": "",
