--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "main": "index.js",
   "scripts": {
-    "start": " index.js"
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
